--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-plugin-vue": "^9.11.0",
     "postcss": "^8.4.21",
+    "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
   }
